plugins {
    id 'java'
}

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
    }

    compileJava {
        options.compilerArgs << '-parameters'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_13
        targetCompatibility = JavaVersion.VERSION_13
    }

    group 'org.meemaw'
    version '1.0-SNAPSHOT'
}
